--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase-admin": "^11.11.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^10.2.0",
+    "sinon": "^17.0.1"
   }
 }
